# handwriting-reader

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
handwriting_reader/: converter.py
